<resources>
    <string name="app_name">여행기</string>
    <string name="client_id">418040417823-n6iv46bvpb495d0dv85ch2diesguvaut.apps.googleusercontent.com</string>
    <string name="client_secret">wrdqyCB89_1Cyyoi9ZRYH1WP</string>

    <string name="ok">확인</string>

    <!-- DetailFragment -->
    <string name="detail_fragment_000">주소</string>
    <string name="detail_fragment_001">전화번호</string>
    <string name="detail_fragment_002">한줄설명</string>
    <string name="detail_fragment_003">상세설명</string>

    <!-- Entry -->
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="user_id">UserId</string>
    <string name="password">Password</string>

    <!-- Facebook -->
    <string name="facebook_app_id">240565534428057</string>
    <string name="fb_login_protocol_scheme">fb240565534428057</string>

    <!-- Kakao -->
    <string name="native_app_key">be3db26cde9668f9593435c66f9eadfe</string>

    <!-- LoginFragment -->
    <string name="login_fragment_000">비밀번호 찾기</string>

    <!-- MainFragment -->
    <string name="main_fragment_000">나의 여행지</string>
    <string name="main_fragment_001">상세 투어내역</string>

    <string-array name="main_tab_item">
        <item>Home</item>
        <item>Todo</item>
        <item>Map</item>
        <item>Message</item>
        <item>Setting</item>
    </string-array>

    <!-- Sign Up -->
    <string name="password_confirm">PasswordConfirm</string>

    <!-- TouristSpotsFragment -->
    <string name="tourist_spots_fragment_000">나의 여행지</string>
</resources>