<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.duke.orca.android.kotlin.travels.widget.SugarEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sugar_edit_text_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_spacing_small"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:gravity="center_vertical"
        android:hint="@string/user_id"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:textInputEditTextHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sugar_edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.duke.orca.android.kotlin.travels.widget.SugarEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sugar_edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_spacing_small"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:hint="@string/password"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:textInputEditTextHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sugar_edit_text_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.duke.orca.android.kotlin.travels.widget.SugarEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sugar_edit_text_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_spacing_small"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:hint="@string/password_confirm"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:textInputEditTextHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/material_button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginTop="@dimen/layout_spacing_extra_large"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>