<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.duke.orca.android.kotlin.travels.widget.SugarEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sugar_edit_text_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_spacing_small"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:gravity="center_vertical"
        android:hint="@string/user_id"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:textInputEditTextHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sugar_edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.duke.orca.android.kotlin.travels.widget.SugarEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sugar_edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_spacing_small"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:hint="@string/password"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:textInputEditTextHeight="48dp"
        app:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/text_view_find_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginBottom="@dimen/layout_spacing_large"
        android:text="@string/find_password"
        app:layout_constraintBottom_toTopOf="@+id/material_button_login"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:layout_marginTop="@dimen/layout_spacing_extra_large"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.duke.orca.android.kotlin.travels.widget.LoginButton
        android:id="@+id/login_button_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:layout_marginTop="@dimen/layout_spacing_large"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        app:backgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_button_login"
        app:symbol="@drawable/ic_facebook_login_100"
        app:text="페이스북 로그인"
        app:textColor2="@color/black" />

    <com.duke.orca.android.kotlin.travels.widget.LoginButton
        android:id="@+id/login_button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:layout_marginTop="@dimen/layout_spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_facebook"
        app:symbol="@drawable/ic_google_login_48"
        app:text="구글 로그인"
        app:textColor2="@color/black"/>

    <com.duke.orca.android.kotlin.travels.widget.LoginButton
        android:id="@+id/login_button_kakao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:layout_marginTop="@dimen/layout_spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_google"
        app:symbol="@drawable/ic_kakao_login_36px"
        app:text="카카오 로그인"
        app:textColor2="@color/black"/>

    <com.duke.orca.android.kotlin.travels.widget.LoginButton
        android:id="@+id/login_button_naver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_spacing_large"
        android:layout_marginStart="@dimen/layout_spacing_large"
        android:layout_marginTop="@dimen/layout_spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_kakao"
        app:symbol="@drawable/ic_naver_login_250px"
        app:text="네이버 로그인"
        app:textColor2="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>